--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "start": "node server.js",
   "server": "nodemon server.js",
   "client": "npm start --prefix ./client",
-  "dev": "concurrently \"npm run start\" \"npm run client\"",
-  "build": "npm run build --prefix ./client"
+  "dev": "concurrently \"npm start\" \"npm run client\""
+  
 },
   "keywords": [],
   "author": "",
